Regression: Fluid Physics not working #101188

Closed
opened 2022-09-19 12:18:03 +02:00 by Christoph Duyster · 14 comments

System Information
Operating system: macOS-12.6-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Max Apple 4.1 Metal - 76.3

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-18 20:10, hash: ecf3435362
Worked: 3.3LTS
Caused by 05952aa94d

Short description of error
Just open Blender, just quick effects - quick liquid - start animate. In earlier version you could see a liquid animation. In the latest 3.4 release you see...nothing.

Exact steps for others to reproduce the error

  • Open default scene
  • Add quick Physics effect: {nav Object > Quick Effects}
**System Information** Operating system: macOS-12.6-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Max Apple 4.1 Metal - 76.3 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-18 20:10, hash: `ecf3435362` Worked: 3.3LTS Caused by 05952aa94d **Short description of error** Just open Blender, just quick effects - quick liquid - start animate. In earlier version you could see a liquid animation. In the latest 3.4 release you see...nothing. **Exact steps for others to reproduce the error** - Open default scene - Add quick Physics effect: {nav Object > Quick Effects}

Added subscriber: @LuckyChris

Added subscriber: @LuckyChris

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

The operator could use some work, see D14450

The operator could use some work, see [D14450](https://archive.blender.org/developer/D14450)

Added subscriber: @costa

Added subscriber: @costa

Same here, liquid just doesn't work

Same here, liquid just doesn't work
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm. A commit between 5ae3fa50e2 - f0a3659900 has broken the physics properties fluid physics. I'll check

Thanks for the report. I can confirm. A commit between 5ae3fa50e224 - f0a36599007d has broken the ~~physics properties~~ fluid physics. I'll check
Pratik Borhade changed title from quick liquid on default cube does....nothing to Fluid Physics not working 2022-09-20 07:33:06 +02:00
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

First bad commit- 05952aa94d
@HooglyBoogly ^

First bad commit- 05952aa94d @HooglyBoogly ^

Added subscriber: @zeauro

Added subscriber: @zeauro

Quick Smoke is also broken.
When we try it on default cube, Mapping is wrong.
One quarter of smoke is visible in corner of domain, at a wrong scale, instead of full smoke in middle of domain.

Quick Smoke is also broken. When we try it on default cube, Mapping is wrong. One quarter of smoke is visible in corner of domain, at a wrong scale, instead of full smoke in middle of domain.
Philipp Oeser changed title from Fluid Physics not working to Regression: Fluid Physics not working 2022-09-20 09:17:57 +02:00
Hans Goudey self-assigned this 2022-09-20 18:00:46 +02:00

This issue was referenced by 6f15141f27

This issue was referenced by 6f15141f2731382792514571ffa5d89c9dcf7492
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101188
No description provided.